<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" 
    android:key="prefs_root">

    <PreferenceScreen
        android:persistent="false"
        android:title="@string/layout" 
        android:summary="@string/layoutSummary">
        <net.salisburys.dayclock.TextPrefSummary
            android:defaultValue="@string/prologueDef"
            android:key="prologue"
            android:summary="@string/prologue"
            android:title="@string/prologueTitle" />
        <net.salisburys.dayclock.TextPrefSummary
            android:defaultValue="40"
            android:inputType="number"
            android:key="prologueSize"
            android:summary="@string/summarySize"
            android:title="@string/prologueSizeTitle" />
        <net.salisburys.dayclock.TextPrefSummary
            android:defaultValue="70"
            android:inputType="number"
            android:key="dateDOWSize"
            android:summary="@string/daySize"
            android:title="@string/daySizeTitle" />
        <net.salisburys.dayclock.TextPrefSummary
            android:defaultValue="60"
            android:inputType="number"
            android:key="dateTODSize"
            android:summary="@string/timeSize"
            android:title="@string/timeSizeTitle" />
    </PreferenceScreen>
    <PreferenceScreen
        android:key="pref_period1"
        android:title="@string/pref_period1" >
        <net.salisburys.dayclock.TextPrefSummary
            android:defaultValue="@string/pref_period1_text_def"
            android:key="pref_period1_text"
            android:title="@string/pref_period_text" />

        <net.salisburys.dayclock.TimePreference
            android:defaultValue="@string/pref_period1_start_def"
            android:key="pref_period1_start"
            android:title="@string/pref_period_start" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:disableDependentsState="true"
            android:key="pref_period1_tillNext"
            android:title="@string/pref_period_tillNext" />

        <net.salisburys.dayclock.TimePreference
            android:defaultValue="0"
            android:dependency="pref_period1_tillNext"
            android:key="pref_period1_end"
            android:title="@string/pref_period_end" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:disableDependentsState="true"
            android:key="pref_period1_allDays"
            android:title="@string/pref_period_allDays" />

        <MultiSelectListPreference
            android:defaultValue="@array/pref_period_defaultValues"
            android:dependency="pref_period1_allDays"
            android:entries="@array/pref_period_dayNames"
            android:entryValues="@array/pref_period_dayValues"
            android:key="pref_period1_days"
            android:title="@string/pref_period_days" />
    </PreferenceScreen>

    <PreferenceScreen
        android:key="pref_period2"
        android:title="@string/pref_period2" >
        <net.salisburys.dayclock.TextPrefSummary
            android:defaultValue="@string/pref_period2_text_def"
            android:key="pref_period2_text"
            android:title="@string/pref_period_text" />

        <net.salisburys.dayclock.TimePreference
            android:defaultValue="@string/pref_period2_start_def"
            android:key="pref_period2_start"
            android:title="@string/pref_period_start" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:disableDependentsState="true"
            android:key="pref_period2_tillNext"
            android:title="@string/pref_period_tillNext" />

        <net.salisburys.dayclock.TimePreference
            android:defaultValue="0"
            android:dependency="pref_period2_tillNext"
            android:key="pref_period2_end"
            android:title="@string/pref_period_end" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:disableDependentsState="true"
            android:key="pref_period2_allDays"
            android:title="@string/pref_period_allDays" />

        <MultiSelectListPreference
            android:defaultValue="@array/pref_period_defaultValues"
            android:dependency="pref_period2_allDays"
            android:entries="@array/pref_period_dayNames"
            android:entryValues="@array/pref_period_dayValues"
            android:key="pref_period2_days"
            android:title="@string/pref_period_days" />
    </PreferenceScreen>

    <PreferenceScreen
        android:key="pref_period3"
        android:title="@string/pref_period3" >
        <net.salisburys.dayclock.TextPrefSummary
            android:defaultValue="@string/pref_period3_text_def"
            android:key="pref_period3_text"
            android:title="@string/pref_period_text" />

        <net.salisburys.dayclock.TimePreference
            android:defaultValue="@string/pref_period3_start_def"
            android:key="pref_period3_start"
            android:title="@string/pref_period_start" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:disableDependentsState="true"
            android:key="pref_period3_tillNext"
            android:title="@string/pref_period_tillNext" />

        <net.salisburys.dayclock.TimePreference
            android:defaultValue="0"
            android:dependency="pref_period3_tillNext"
            android:key="pref_period3_end"
            android:title="@string/pref_period_end" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:disableDependentsState="true"
            android:key="pref_period3_allDays"
            android:title="@string/pref_period_allDays" />

        <MultiSelectListPreference
            android:defaultValue="@array/pref_period_defaultValues"
            android:dependency="pref_period3_allDays"
            android:entries="@array/pref_period_dayNames"
            android:entryValues="@array/pref_period_dayValues"
            android:key="pref_period3_days"
            android:title="@string/pref_period_days" />
    </PreferenceScreen>

    <PreferenceScreen
        android:key="pref_period4"
        android:title="@string/pref_period4" >
        <net.salisburys.dayclock.TextPrefSummary
            android:defaultValue="@string/pref_period4_text_def"
            android:key="pref_period4_text"
            android:title="@string/pref_period_text" />

        <net.salisburys.dayclock.TimePreference
            android:defaultValue="@string/pref_period4_start_def"
            android:key="pref_period4_start"
            android:title="@string/pref_period_start" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:disableDependentsState="true"
            android:key="pref_period4_tillNext"
            android:title="@string/pref_period_tillNext" />

        <net.salisburys.dayclock.TimePreference
            android:defaultValue="0"
            android:dependency="pref_period4_tillNext"
            android:key="pref_period4_end"
            android:title="@string/pref_period_end" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:disableDependentsState="true"
            android:key="pref_period4_allDays"
            android:title="@string/pref_period_allDays" />

        <MultiSelectListPreference
            android:defaultValue="@array/pref_period_defaultValues"
            android:dependency="pref_period4_allDays"
            android:entries="@array/pref_period_dayNames"
            android:entryValues="@array/pref_period_dayValues"
            android:key="pref_period4_days"
            android:title="@string/pref_period_days" />
    </PreferenceScreen>

    <PreferenceScreen
        android:key="pref_period5"
        android:title="@string/pref_period5" >
        <net.salisburys.dayclock.TextPrefSummary
            android:defaultValue="@string/pref_period5_text_def"
            android:key="pref_period5_text"
            android:title="@string/pref_period_text" />

        <net.salisburys.dayclock.TimePreference
            android:defaultValue="@string/pref_period5_start_def"
            android:key="pref_period5_start"
            android:title="@string/pref_period_start" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:disableDependentsState="true"
            android:key="pref_period5_tillNext"
            android:title="@string/pref_period_tillNext" />

        <net.salisburys.dayclock.TimePreference
            android:defaultValue="0"
            android:dependency="pref_period5_tillNext"
            android:key="pref_period5_end"
            android:title="@string/pref_period_end" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:disableDependentsState="true"
            android:key="pref_period5_allDays"
            android:title="@string/pref_period_allDays" />

        <MultiSelectListPreference
            android:defaultValue="@array/pref_period_defaultValues"
            android:dependency="pref_period5_allDays"
            android:entries="@array/pref_period_dayNames"
            android:entryValues="@array/pref_period_dayValues"
            android:key="pref_period5_days"
            android:title="@string/pref_period_days" />
    </PreferenceScreen>

    <PreferenceScreen
        android:key="pref_period6"
        android:title="@string/pref_period6" >
        <net.salisburys.dayclock.TextPrefSummary
            android:defaultValue="@string/pref_period6_text_def"
            android:key="pref_period6_text"
            android:title="@string/pref_period_text" />

        <net.salisburys.dayclock.TimePreference
            android:defaultValue="@string/pref_period6_start_def"
            android:key="pref_period6_start"
            android:title="@string/pref_period_start" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:disableDependentsState="true"
            android:key="pref_period6_tillNext"
            android:title="@string/pref_period_tillNext" />

        <net.salisburys.dayclock.TimePreference
            android:defaultValue="0"
            android:dependency="pref_period6_tillNext"
            android:key="pref_period6_end"
            android:title="@string/pref_period_end" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:disableDependentsState="true"
            android:key="pref_period6_allDays"
            android:title="@string/pref_period_allDays" />

        <MultiSelectListPreference
            android:defaultValue="@array/pref_period_defaultValues"
            android:dependency="pref_period6_allDays"
            android:entries="@array/pref_period_dayNames"
            android:entryValues="@array/pref_period_dayValues"
            android:key="pref_period6_days"
            android:title="@string/pref_period_days" />
    </PreferenceScreen>

    <PreferenceScreen
        android:key="pref_period7"
        android:title="@string/pref_period7" >
        <net.salisburys.dayclock.TextPrefSummary
            android:defaultValue="@string/pref_period7_text_def"
            android:key="pref_period7_text"
            android:title="@string/pref_period_text" />

        <net.salisburys.dayclock.TimePreference
            android:defaultValue="@string/pref_period7_start_def"
            android:key="pref_period7_start"
            android:title="@string/pref_period_start" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:disableDependentsState="true"
            android:key="pref_period7_tillNext"
            android:title="@string/pref_period_tillNext" />

        <net.salisburys.dayclock.TimePreference
            android:defaultValue="0"
            android:dependency="pref_period7_tillNext"
            android:key="pref_period7_end"
            android:title="@string/pref_period_end" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:disableDependentsState="true"
            android:key="pref_period7_allDays"
            android:title="@string/pref_period_allDays" />

        <MultiSelectListPreference
            android:defaultValue="@array/pref_period_defaultValues"
            android:dependency="pref_period7_allDays"
            android:entries="@array/pref_period_dayNames"
            android:entryValues="@array/pref_period_dayValues"
            android:key="pref_period7_days"
            android:title="@string/pref_period_days" />
    </PreferenceScreen>

    <PreferenceScreen
        android:key="pref_period8"
        android:title="@string/pref_period8" >
        <net.salisburys.dayclock.TextPrefSummary
            android:defaultValue="@string/pref_period8_text_def"
            android:key="pref_period8_text"
            android:title="@string/pref_period_text" />

        <net.salisburys.dayclock.TimePreference
            android:defaultValue="@string/pref_period8_start_def"
            android:key="pref_period8_start"
            android:title="@string/pref_period_start" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:disableDependentsState="true"
            android:key="pref_period8_tillNext"
            android:title="@string/pref_period_tillNext" />

        <net.salisburys.dayclock.TimePreference
            android:defaultValue="0"
            android:dependency="pref_period8_tillNext"
            android:key="pref_period8_end"
            android:title="@string/pref_period_end" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:disableDependentsState="true"
            android:key="pref_period8_allDays"
            android:title="@string/pref_period_allDays" />

        <MultiSelectListPreference
            android:defaultValue="@array/pref_period_defaultValues"
            android:dependency="pref_period8_allDays"
            android:entries="@array/pref_period_dayNames"
            android:entryValues="@array/pref_period_dayValues"
            android:key="pref_period8_days"
            android:title="@string/pref_period_days" />
    </PreferenceScreen>

</PreferenceScreen>